manifests/apps/alpha-engine/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: alpha-engine
  namespace: alpha-engine

spec:
  type: ClusterIP

  selector:
    app: alpha-engine

  ports:
  - name: http
    port: 80
    targetPort: http
