manifests/apps/alpha-engine/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alpha-engine
  namespace: alpha-engine
spec:
  ingressClassName: nginx
  rules:
  - host: alpha-engine.local
    http:
      paths:
      - backend:
          service:
            name: alpha-engine
            port:
              number: 80
        path: /
        pathType: Prefix
